--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@
 locale                   : "en-US"
 title                    : "Jorn Knuit"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "personal description"
+name                     : &name "Jorn Knuit"
+description              : &description "PhD Candidate @ Utrecht University"
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
