--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Jorn Knuit"
   pronouns         : "he/him"  
-  bio              : "PhD Candidate @ Utrecht University"
+  bio              : "PhD Candidate"
   location         : "Utrecht, The Netherlands"
   employer         : "Utrecht University"
   uri              : # URL
