--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "JornKnuit/JornKnuit.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "Downloads/ProfilePicture.jpeg"
   name             : "Jorn Knuit"
   pronouns         : "he/him"  
   bio              : "PhD Candidate"
