--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   # Biographic information
   avatar           : "images/bio-photo-2.jpg"
   name             : "Jorn Knuit"
-  pronouns         : "he/him"  
+  pronouns         : "He/Him"  
   bio              : "PhD Candidate"
   location         : "Utrecht, The Netherlands"
   employer         : "Utrecht University"
