--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "https://www.linkedin.com/in/jorn-knuit-b4246b172/"
+  linkedin         : "jorn-knuit-b4246b172"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
